--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,18 @@
-APP_NAME=Laravel
+APP_NAME="Mimics Arcade"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=**
 
 LOG_CHANNEL=stack
+FILESYSTEM_DRIVER=public
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_HOST=**
+DB_PORT=**
+DB_DATABASE=**
+DB_USERNAME=**
+DB_PASSWORD=**
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,12 +25,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -44,3 +45,11 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FACEBOOK_CLIENT_ID=**
+FACEBOOK_CLIENT_SECRET=**
+FACEBOOK_CLIENT_URL=**
+
+GOOGLE_CLIENT_ID=**
+GOOGLE_CLIENT_SECRET=**
+GOOGLE_CLIENT_URL=**
